--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <!-- Seven -->
         <section class="wrapper style1 align-center">
             <div class="inner medium">
-                <h2>Get in touch</h2>
+                <h2>Let's Connect!</h2>
                 <form method="post" action="#">
                     <div class="fields">
                         <div class="field half">
